kube/member-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - memberjs.bchd.cash
    secretName: member-tls
  defaultBackend:
    service:
      name: member
      port:
        number: 97
  rules:
  - host: memberjs.bchd.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: member
            port:
              number: 97
